--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 # Site settings
-title: 闫肃的博客
-email: suyan0830@gmail.com
+title: Zhaofeng的博客
+email: zhizhaofeng@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  闫肃的博客
+  Zhaofeng的博客
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: http://yansu.org # the base hostname & protocol for your site
+url: http://zhizhaofeng.github.io # the base hostname & protocol for your site
 rss_url: /pages/feed.xml
-author: Su Yan
+author: Zhaofeng Zhi
 
 # Sidebar filter
 # Choose 'tag' or 'category' as filter in sidebar.
