--- a/_config.yml
+++ b/_config.yml
@@ -14,11 +14,11 @@ filter: 'category'
 recent_num: 20
 
 # Social account
-twitter: suyan404
-weibo: suyan0830
-github: suyan
-instagram: suyan404
-linkedin: suyan404
+# twitter: suyan404
+# weibo: suyan0830
+# github: suyan
+# instagram: suyan404
+# linkedin: suyan404
 
 # avatar and Favicon
 avatar: http://imgs.yansu.org/site-avatar.png
@@ -26,12 +26,12 @@ favicon: http://imgs.yansu.org/site-favicon.ico
 
 # disqus config
 disqus:
-  shortname: suyan-zh
+  shortname: zhizhaofeng-zh
 
 # google analytics config
-ga:
-  id: UA-54767140-1
-  url: yansu.org
+# ga:
+#   id: UA-54767140-1
+#  url: yansu.org
 
 # Build settings
 permalink: /:year/:month/:day/:title.html
