--- a/_config.yml
+++ b/_config.yml
@@ -21,8 +21,8 @@ recent_num: 20
 # linkedin: suyan404
 
 # avatar and Favicon
-avatar: http://imgs.yansu.org/site-avatar.png
-favicon: http://imgs.yansu.org/site-favicon.ico
+# avatar: http://imgs.yansu.org/site-avatar.png
+# favicon: http://imgs.yansu.org/site-favicon.ico
 
 # disqus config
 disqus:
